--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,48 +1,63 @@
+body {
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  }
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+}
+
 .square {
-    background: #fff;
-    border: 0.2vw solid #999;
-    float: left;
-    font-size: 2.5vw;
-    font-weight: bold;
-    line-height: 5vw;
-    height: 5vw;
-    margin-right: -0.5vw;
-    margin-top: -0.8vw;
-    text-align: center;
-    width: 5vw;
+  background: #fff;
+  border: 0.2vw solid #999;
+  float: left;
+  font-size: 2.5vw;
+  font-weight: bold;
+  line-height: 5vw;
+  height: 5vw;
+  margin-right: -0.5vw;
+  margin-top: -0.8vw;
+  text-align: center;
+  width: 5vw;
 }
 
 .top {
-    border-top: 0.3vw solid #000;
+  border-top: 0.3vw solid #000;
 }
 
 .bottom {
-    border-bottom: 0.3vw solid #000;
+  border-bottom: 0.3vw solid #000;
 }
 
 .left {
-    border-left: 0.3vw solid #000;
+  border-left: 0.3vw solid #000;
 }
 
 .right {
-    border-right: 0.3vw solid #000;
+  border-right: 0.3vw solid #000;
 }
 
 .title {
-    text-align: center;
+  text-align: center;
 }
 
 .sudoku {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .grid {
-    flex: 4;
-    margin: auto;
+  flex: 4;
+  margin: auto;
 }
 
 .controls {
-    flex: 1;
-    margin: auto;
+  flex: 1;
+  margin: auto;
 }
