--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,6 @@
 body {
+  background: #a9a9a9;
+  color: #202020;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -14,7 +16,7 @@ code {
 }
 
 .square {
-  background: #fff;
+  background: #f5f5f5;
   border: 0.2vw solid #999;
   float: left;
   font-size: 2.5vw;
@@ -28,23 +30,24 @@ code {
 }
 
 .top {
-  border-top: 0.3vw solid #000;
+  border-top: 0.3vw solid;
 }
 
 .bottom {
-  border-bottom: 0.3vw solid #000;
+  border-bottom: 0.3vw solid;
 }
 
 .left {
-  border-left: 0.3vw solid #000;
+  border-left: 0.3vw solid;
 }
 
 .right {
-  border-right: 0.3vw solid #000;
+  border-right: 0.3vw solid;
 }
 
 .title {
   text-align: center;
+  font-size: 3vw;
 }
 
 .sudoku {
@@ -53,11 +56,30 @@ code {
 }
 
 .grid {
-  flex: 4;
   margin: auto;
 }
 
 .controls {
-  flex: 1;
+  font-weight: bold;
+  align-items: center;
+  display: inline;
+  font-size: 1.5vw;
   margin: auto;
+}
+
+.button {
+  background-color: #505050;
+  border-radius: 10vw;
+  border: none;
+  color: #f5f5f5;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 1.5vw;
+  margin: 1vw;
+  padding: 1vw;
+  text-align: center;
+}
+
+input[type="range"] {
+  width: 12vw;
 }
