--- a/src/css/style.css
+++ b/src/css/style.css
@@ -17,7 +17,7 @@ code {
 
 .square {
   background: #f5f5f5;
-  border: 0.2vw solid #999;
+  border: 0.2vw solid #989898;
   float: left;
   font-size: 2.5vw;
   font-weight: bold;
@@ -67,8 +67,14 @@ code {
   margin: auto;
 }
 
-.button {
-  background-color: #505050;
+button:disabled {
+  background: #989898;
+  color: #505050;
+  cursor: default;
+}
+
+button {
+  background: #505050;
   border-radius: 10vw;
   border: none;
   color: #f5f5f5;
