--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,19 @@
+:root {
+  --theme-background-color: #a9a9a9;
+  --theme-text-color: #202020;
+  --theme-square-background-color: #f5f5f5;
+  --theme-square-border-color: #989898;
+  --theme-square-initial-color: #808080;
+  --theme-square-bold-border-color: #202020;
+  --theme-button-background-color: #505050;
+  --theme-button-text-color: #f5f5f5;
+  --theme-button-disabled-background-color: #989898;
+  --theme-button-disabled-text-color: #505050;
+}
+
 body {
-  background: #a9a9a9;
-  color: #202020;
+  background: var(--theme-background-color);
+  color: var(--theme-text-color);
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -16,8 +29,8 @@ code {
 }
 
 .square {
-  background: #f5f5f5;
-  border: 0.2vw solid #989898;
+  background: var(--theme-square-background-color);
+  border: 0.2vw solid var(--theme-square-border-color);
   float: left;
   font-size: 2.5vw;
   font-weight: bold;
@@ -30,23 +43,23 @@ code {
 }
 
 .initial {
-  color: #808080;
+  color: var(--theme-square-initial-color);
 }
 
 .top {
-  border-top: 0.3vw solid #202020;
+  border-top: 0.3vw solid var(--theme-square-bold-border-color);
 }
 
 .bottom {
-  border-bottom: 0.3vw solid #202020;
+  border-bottom: 0.3vw solid var(--theme-square-bold-border-color);
 }
 
 .left {
-  border-left: 0.3vw solid #202020;
+  border-left: 0.3vw solid var(--theme-square-bold-border-color);
 }
 
 .right {
-  border-right: 0.3vw solid #202020;
+  border-right: 0.3vw solid var(--theme-square-bold-border-color);
 }
 
 .title {
@@ -72,16 +85,16 @@ code {
 }
 
 button:disabled {
-  background: #989898;
-  color: #505050;
+  background: var(--theme-button-disabled-background-color);
+  color: var(--theme-button-disabled-text-color);
   cursor: default;
 }
 
 button {
-  background: #505050;
+  background: var(--theme-button-background-color);
   border-radius: 10vw;
   border: none;
-  color: #f5f5f5;
+  color: var(--theme-button-text-color);
   cursor: pointer;
   display: inline-block;
   font-size: 1.5vw;
