--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,19 +1,15 @@
 :root {
-  --theme-background-color: #a9a9a9;
-  --theme-text-color: #202020;
-  --theme-square-background-color: #f5f5f5;
-  --theme-square-border-color: #989898;
-  --theme-square-initial-color: #808080;
-  --theme-square-bold-border-color: #202020;
-  --theme-button-background-color: #505050;
-  --theme-button-text-color: #f5f5f5;
-  --theme-button-disabled-background-color: #989898;
-  --theme-button-disabled-text-color: #505050;
+  --theme-dark-color1: #202020;
+  --theme-dark-color2: #505050;
+  --theme-dark-color3: #808080;
+  --theme-light-color1: #989898;
+  --theme-light-color2: #a9a9a9;
+  --theme-light-color3: #f5f5f5;
 }
 
 body {
-  background: var(--theme-background-color);
-  color: var(--theme-text-color);
+  background: var(--theme-light-color2);
+  color: var(--theme-dark-color1);
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -29,8 +25,8 @@ code {
 }
 
 .square {
-  background: var(--theme-square-background-color);
-  border: 0.2vw solid var(--theme-square-border-color);
+  background: var(--theme-light-color3);
+  border: 0.2vw solid var(--theme-light-color1);
   float: left;
   font-size: 2.5vw;
   font-weight: bold;
@@ -43,23 +39,23 @@ code {
 }
 
 .initial {
-  color: var(--theme-square-initial-color);
+  color: var(--theme-dark-color3);
 }
 
 .top {
-  border-top: 0.3vw solid var(--theme-square-bold-border-color);
+  border-top: 0.3vw solid var(--theme-dark-color1);
 }
 
 .bottom {
-  border-bottom: 0.3vw solid var(--theme-square-bold-border-color);
+  border-bottom: 0.3vw solid var(--theme-dark-color1);
 }
 
 .left {
-  border-left: 0.3vw solid var(--theme-square-bold-border-color);
+  border-left: 0.3vw solid var(--theme-dark-color1);
 }
 
 .right {
-  border-right: 0.3vw solid var(--theme-square-bold-border-color);
+  border-right: 0.3vw solid var(--theme-dark-color1);
 }
 
 .title {
@@ -85,16 +81,16 @@ code {
 }
 
 button:disabled {
-  background: var(--theme-button-disabled-background-color);
-  color: var(--theme-button-disabled-text-color);
+  background: var(--theme-light-color1);
+  color: var(--theme-dark-color2);
   cursor: default;
 }
 
 button {
-  background: var(--theme-button-background-color);
+  background: var(--theme-dark-color2);
   border-radius: 10vw;
   border: none;
-  color: var(--theme-button-text-color);
+  color: var(--theme-light-color3);
   cursor: pointer;
   display: inline-block;
   font-size: 1.5vw;
