--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,15 +1,14 @@
 :root {
-  --theme-dark-color1: #202020;
-  --theme-dark-color2: #505050;
-  --theme-dark-color3: #808080;
-  --theme-light-color1: #989898;
-  --theme-light-color2: #a9a9a9;
-  --theme-light-color3: #f5f5f5;
+  --theme-main: #838484;
+  --theme-dark-shade: #3F393F;
+  --theme-dark-accent: #9394A3;
+  --theme-light-shade: #F5F4F4;
+  --theme-light-accent: #BFC2BC;
 }
 
 body {
-  background: var(--theme-light-color2);
-  color: var(--theme-dark-color1);
+  background: var(--theme-main);
+  color: var(--theme-dark-shade);
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -25,8 +24,8 @@ code {
 }
 
 .square {
-  background: var(--theme-light-color3);
-  border: 0.2vw solid var(--theme-light-color1);
+  background: var(--theme-light-shade);
+  border: 0.2vw solid var(--theme-light-accent);
   float: left;
   font-size: 2.5vw;
   font-weight: bold;
@@ -39,23 +38,23 @@ code {
 }
 
 .initial {
-  color: var(--theme-dark-color3);
+  color: var(--theme-light-accent);
 }
 
 .top {
-  border-top: 0.3vw solid var(--theme-dark-color1);
+  border-top: 0.3vw solid var(--theme-dark-shade);
 }
 
 .bottom {
-  border-bottom: 0.3vw solid var(--theme-dark-color1);
+  border-bottom: 0.3vw solid var(--theme-dark-shade);
 }
 
 .left {
-  border-left: 0.3vw solid var(--theme-dark-color1);
+  border-left: 0.3vw solid var(--theme-dark-shade);
 }
 
 .right {
-  border-right: 0.3vw solid var(--theme-dark-color1);
+  border-right: 0.3vw solid var(--theme-dark-shade);
 }
 
 .title {
@@ -81,16 +80,16 @@ code {
 }
 
 button:disabled {
-  background: var(--theme-light-color1);
-  color: var(--theme-dark-color2);
+  background: var(--theme-light-shade);
+  color: var(--theme-dark-shade);
   cursor: default;
 }
 
 button {
-  background: var(--theme-dark-color2);
+  background: var(--theme-dark-shade);
   border-radius: 10vw;
   border: none;
-  color: var(--theme-light-color3);
+  color: var(--theme-light-shade);
   cursor: pointer;
   display: inline-block;
   font-size: 1.5vw;
@@ -100,7 +99,7 @@ button {
 }
 
 button:enabled:hover {
-  background-color: var(--theme-light-color1);
+  background-color: var(--theme-dark-accent);
   transition: background-color 1s;
 }
 
@@ -112,6 +111,6 @@ select {
   cursor: pointer;
   outline: none;
   border: none;
-  background: var(--theme-dark-color2);
-  color: var(--theme-light-color3);
+  background: var(--theme-dark-shade);
+  color: var(--theme-light-shade);
 }
